# SHL_assesment

./: .env  README.md  api.py  app.py  assessments.db  database.py  embeddings.py  main.py  pyproject.toml  recommender.py  requirements.txt  schema.py  scraper.py  ui.py
templates/: index.html
